[package]
name = "rb-scrobbler"
version = "0.1.0"
authors = ["Eddie Jeselnik <eddie@jeselnik.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_dirs = "^1.2.1"
clap = "2"
chrono = "0.4"
rustfm-scrobble="1.0"
time = "0.1"
